# lab05

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  REPORT.md  gtest_werror_fix.cmake
.github/workflows/: ci.yml  coveralls.yml
banking/: Account.cpp  Account.h  CMakeLists.txt  Transaction.cpp  Transaction.h
banking/tests/: test_mock.cpp  test_transaction.cpp  test_transaction_mock.cpp
examples/: CMakeLists.txt  example1.cpp  example2.cpp
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.hpp
formatter_lib/: CMakeLists.txt  formatter.cpp  formatter.hpp
hello_world_application/: CMakeLists.txt  hello_world.cpp
solver_application/: CMakeLists.txt  solver.cpp
solver_lib/: CMakeLists.txt  solver.cpp  solver.hpp
sources/: print.cpp
